--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Rails-queue by probablywrong</title>
+    <title>rails-queue by probablywrong</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Rails-queue</h1>
+        <h1>rails-queue</h1>
         <p>Rails.queue (from Rails 4) backported to Rails 3.2+</p>
         <p class="view"><a href="https://github.com/probablywrong/rails-queue">View the Project on GitHub <small>probablywrong/rails-queue</small></a></p>
         <ul>
@@ -27,9 +27,7 @@
         </ul>
       </header>
       <section>
-        <h1>rails-queue</h1>
-
-<p><a href="https://travis-ci.org/probablywrong/rails-queue"><img src="https://secure.travis-ci.org/probablywrong/rails-queue.png" alt="Build Status"></a></p>
+        <p><a href="https://travis-ci.org/probablywrong/rails-queue"><img src="https://secure.travis-ci.org/probablywrong/rails-queue.png" alt="Build Status"></a></p>
 
 <h2>Description</h2>
 
