Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         </ul>
       </header>
       <section>
-        <p><a href="https://travis-ci.org/probablywrong/rails-queue"><img src="https://secure.travis-ci.org/probablywrong/rails-queue.png" alt="Build Status"></a></p>
+        <h1>rails-queue</h1>
+
+<p><a href="https://travis-ci.org/probablywrong/rails-queue"><img src="https://secure.travis-ci.org/probablywrong/rails-queue.png" alt="Build Status"></a> <a href="https://codeclimate.com/github/probablywrong/rails-queue"><img src="https://codeclimate.com/badge.png" alt="Code Climate"></a></p>
 
 <h2>Description</h2>
 
@@ -181,7 +183,7 @@
 </ul><h2>Contributing</h2>
 
 <ol>
-<li><a href="https://github.com/phlipper/rails-four-queueing/fork_select">Fork it</a></li>
+<li><a href="https://github.com/probablywrong/rails-queue/fork_select">Fork it</a></li>
 <li>Create your feature branch (<code>git checkout -b my-new-feature</code>)</li>
 <li>Commit your changes (<code>git commit -am 'Added some feature'</code>)</li>
 <li>Push to the branch (<code>git push origin my-new-feature</code>)</li>
